--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+.container{
+  display: flex;
+}
+.boxes{
+  height: 300px;
+  width: 200px;
+  float:left;
+  margin-left: 10px;
+}
 
 .sect1{
   height: 71px;
@@ -19,8 +28,10 @@
 
 .sect2{
   background-color: #0a043c;
-  height: 100vh;
-  overflow-y: scroll;
+      height: 100vh;
+      padding-top: 10px;
+      padding-left: 80px;
+      overflow-y: scroll;
 }
 
 
