--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,91 @@
-*{
-  margin:0;
-  padding: 0;
-  box-sizing: border-box;
-}
-.container{
-  display: flex;
-}
-.boxes{
-  height: 300px;
-  width: 200px;
-  float:left;
-  margin-left: 10px;
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+    box-sizing: border-box;
 }
 
-.sect1{
-  height: 71px;
-  background-color: darkblue;
+body {
+    background: #1E2D3B;
+    min-height: 100vh;
 }
 
-.sect1 input{
-  height: 21px;
-  padding-right: 40px;
+.container {
+    width: 1070px;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.container input{
+  margin-top:30px;
   float: right;
-  margin-right: 20px;
-  margin-top: 20px;
 }
 
-.sect2{
-  background-color: #0a043c;
-      height: 100vh;
-      padding-top: 10px;
-      padding-left: 80px;
-      overflow-y: scroll;
+header {
+    width: 100%;
+    height: 80px;
+    background: rgb(46, 58, 70);
+}
+header img {
+    height: 50px;
+    margin-top: 10px;
 }
 
+.cds-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 100px 0;
+}
+
+.cd {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    flex-basis: 200px;
+    padding: 20px;
+    margin: 10px 20px;
+    height: 527px;
+    background: rgb(46, 58, 70);
+    text-align: center;
+}
+
+.cd img {
+    max-width: 100%;
+}
+
+.hide{
+  display: none;
+}
+
+.cd h3 {
+    margin: 20px 0;
+    color: white;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.cd span.author {
+    color: grey;
+    font-size: 20px;
+}
+
+.cd span.year {
+    color: grey;
+}
+
+.empty{
+  height: 224px;
+  width:153px;
+  background-color: grey;
+}
 
 .logo{
   height: 64px;
   width: 69px;
   margin-left: 30px;
   border-radius: 67px;
-}
-
-.box1{
-  display: flex;
-  height: 200px;
-  width: 200px;
-  background-color: yellow
 }
