--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,17 @@
     box-sizing: border-box;
 }
 
+ul li {
+  list-style: none;
+}
+
 body {
     background: #1E2D3B;
     min-height: 100vh;
+}
+
+.cd .far{
+  color: yellow;
 }
 
 .container {
