--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,13 @@ body {
     min-height: 100vh;
 }
 
-.cd .far{
+.cd .fas{
   color: yellow;
 }
 
 .ray{
   color: white;
+  padding-bottom: 20px;
 }
 
 .container {
@@ -77,7 +78,7 @@ header img {
 .cd h3 {
     margin: 20px 0;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     text-transform: uppercase;
 }
 
