--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body {
   padding-bottom: 20px;
 }
 
+.lani{
+  height: 37px;
+  width:42px;
+}
+
 .container {
     width: 1070px;
     height: 100%;
